styles.css
body {
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    background-color: rgb(237, 234, 221);
}

h1,
h2 {
    font-family: Garamond, 'Times New Roman', Georgia;
}

#mainpagetitle,
#mainpagelist {
    text-align: center;
}

div#mainpagelist {
    background-color: rgba(189, 187, 175, 0.72);
    width: 25%;
    margin: 0 auto;
    text-align: center;
    padding: 8px 12px;

}

div#mainpagelist,
.stepslist,
.ingredientslist {
    background-color: rgba(189, 187, 175, 0.72);
    border: solid 0px;
    border-radius: 16px;
}

.stepslist,
.ingredientslist {
    width: 50%;
    margin: 12px auto;
    padding: 4px 12px 12px 8px;
}

#mainpagetitle {
    font-size: 42px;
}

.para.description {
    text-align: center;
    width: 75%;
    margin: 12px auto;
}

img.recipeimage {
    width: 400px;
    height: 300px;
    display: block;
    margin: auto;
}

#mainpagedescription {
    margin-top: -20px;
    font-weight: 700;
    background-color: rgba(0, 0, 0, 0);
}

ul,
ol,
li {
    text-align: left;
}

a {
    color: rgb(70, 49, 49);
}

.goback {
    color: rgb(70, 49, 49);
    background-color: hsl(33, 48%, 69%);
    padding: 6px 12px;
    border: solid 1px;
    border-radius: 16px;
    border-color: hsla(0, 0%, 0%, 0.25);
    margin: 12px auto;
    width: 64px;
    display: block
}

